--- a/DatingAppAPI/appsettings.Development.json
+++ b/DatingAppAPI/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dating-app.db"
   },
+  "TokenKey": "test: testing key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
